# NoiseExtension

./: .gitattributes  .gitignore  LICENSE  Noise.sln  README.md  build.bat  meson.build  meson.options  readme.md  wasi.ini
.github/: dependabot.yml
.github/actions/spelling/: excludes.txt
.github/workflows/: build.yml  help.yml  msbuild.yml  offline_wiki.yml  publish.yml  release.yml  spelling.yml
Examples/: Noise.mfa
Examples/Noise/: All Noise examples.mfw  Noise Android Example.mfa  Noise Example.mfa  Noise example.mfa  Noise icon generator.mfa  Noise looping animation example.mfa  Noise on Android example.mfa  Noise sandbox.mfa  Noise tilemap example.mfa  Noise.mfa  NoiseLoopingAnimation.mfa  NoiseSandbox.mfa  NoiseWorldGenerator.mfa
Help/: Noise.chm
Inc/Html/: MMFHtmlMasterHeader.hpp
Inc/Shared/: AllPlatformDefines.hpp  DarkEdif.hpp  Edif.h  Edif.hpp
Inc/Windows/: CFile.hpp  MMFMasterHeader.h  Props.h  Surface.hpp
Lib/: FusionSDK.props  meson.build
Lib/Android/: CRunNoise.java  meson.build
Lib/Html/: Extensions.d.ts  Module.d.ts  Noise.ts  meson.build  package-lock.json  package.json  sdk.wit  tsconfig.json
Lib/Html/js/: Extensions.d.ts  Noise.ts  Services.d.ts
Lib/Shared/: DarkEdif.cpp  Edif.General.cpp  Edif.Runtime.cpp  Edif.cpp
Lib/Windows/: meson.build
Noise/: Actions.cpp  Common.h  Conditions.cpp  DarkExt.PostMinify.json  DarkExt.json  Edittime.cpp  Expressions.cpp  Ext.rc  Extension.cpp  Extension.h  Extension.hpp  Noise.Android.vcxproj  Noise.Android.vcxproj.filters  Noise.Shared.vcxitems  Noise.Shared.vcxitems.filters  Noise.Windows.vcxproj  Noise.Windows.vcxproj.filters  Noise.iOS.vcxproj  Properties.cpp  Request.cpp  Request.h  Resource.h  SurfaceObject.hpp  Temp_ACECallTable.cpp
Noise/ACE/: Actions.cpp  Expressions.cpp
NoiseHTML/: DarkEdif.html.js  DarkEdif.uwp.js  Noise.js  Noise.ts  package-lock.json  package.json  readme.md  tsconfig.json  webpack.config.js
NoiseHTML/patches/: fastnoise-lite+1.1.0.patch  fastnoise-lite+1.1.1.patch
Tools/: meson.build
Tools/acecalltablegen/: acecalltablegen.cpp  meson.build
Tools/bin2hpp/: bin2hpp.cpp  meson.build
Tools/jsonminify/: jsonminify.cpp
cross/: android-aarch64.ini  android-armv7a.ini  android-i686.ini  android-x86_64.ini  clang-cl.ini  wasi.ini  wasm-wasi.ini  windows-clang-cl.ini
res/: DarkExt.json  Ext.rc  meson.build
sdk/: MMF2ExtsCommit.txt  meson.build
sdk/cross/: android-aarch64.ini  android-armv7a.ini  android-i686.ini  android-x86_64.ini  wasm-wasi.ini
sdk/inc/Android/: MMFAndroidMasterHeader.hpp
sdk/inc/Html/: MMFHtmlMasterHeader.hpp
sdk/inc/Shared/: AllPlatformDefines.hpp  DarkEdif.hpp  Edif.hpp  SurfaceMultiPlat.hpp
sdk/inc/Windows/: MMFWindowsMasterHeader.hpp
sdk/lib/: meson.build
sdk/lib/Android/: meson.build
sdk/lib/Html/: CRunWasmExtWrapper.ts  Runtime.d.ts  meson.build  package-lock.json  package.json
sdk/lib/Html/js/: Extensions.d.ts  Noise.ts
sdk/lib/Shared/: DarkEdif.cpp  Edif.General.cpp  Edif.Runtime.cpp  Edif.cpp  json.cpp
sdk/lib/Windows/: meson.build
sdk/patches/: inc.diff  lib.diff
sdk/tools/: meson.build
sdk/tools/acecalltablegen/: acecalltablegen.cpp  meson.build
sdk/tools/bin2hpp/: bin2hpp.cpp
sdk/tools/jsonminify/: meson.build
src/: Common.hpp  Edittime.cpp  Ext.rc  Extension.cpp  Extension.hpp  Noise.ts  Properties.cpp  SurfaceObject.hpp  meson.build
src/ace/: Actions.cpp  Expressions.cpp
src/html/: Noise.ts
subprojects/DarkEdif/: meson.build  meson.options
subprojects/DarkEdif/inc/: meson.build
subprojects/DarkEdif/inc/Android/: MMFAndroidMasterHeader.hpp
subprojects/DarkEdif/inc/Shared/: Edif.hpp
subprojects/DarkEdif/lib/: meson.build
subprojects/DarkEdif/lib/Android/: CRunNoise.java  meson.build
subprojects/DarkEdif/lib/Html/: meson.build  package-lock.json  package.json  tsconfig.json
subprojects/DarkEdif/lib/Html/js/: Extensions.d.ts  Noise.ts  Services.d.ts
subprojects/DarkEdif/lib/Shared/: Edif.cpp  meson.build
subprojects/DarkEdif/lib/Windows/: meson.build
subprojects/DarkEdif/tools/: meson.build
subprojects/DarkEdif/tools/acecalltablegen/: meson.build
subprojects/DarkEdif/tools/bin2hpp/: meson.build
subprojects/DarkEdif/tools/jsonminify/: meson.build
subprojects/darkedif-sdk/: MMF2ExtsCommit.txt  meson.build  meson.options
subprojects/darkedif-sdk/inc/: meson.build
subprojects/darkedif-sdk/inc/Android/: MMFAndroidMasterHeader.hpp
subprojects/darkedif-sdk/inc/Html/: MMFHtmlMasterHeader.hpp
subprojects/darkedif-sdk/inc/Shared/: AllPlatformDefines.hpp  DarkEdif.hpp  Edif.hpp  SurfaceMultiPlat.hpp
subprojects/darkedif-sdk/inc/Windows/: CFile.hpp  MMFWindowsMasterHeader.hpp  Palet.hpp  WindowsDefines.hpp  WindowsSurface.hpp
subprojects/darkedif-sdk/lib/: meson.build
subprojects/darkedif-sdk/lib/Android/: CRunExt.java  meson.build
subprojects/darkedif-sdk/lib/Html/: CRunWasmExtWrapper.ts  Runtime.d.ts  meson.build  package-lock.json  package.json
subprojects/darkedif-sdk/lib/Shared/: DarkEdif.cpp  Edif.General.cpp  Edif.Runtime.cpp  Edif.cpp  SurfaceMultiPlat.cpp
subprojects/darkedif-sdk/lib/Windows/: meson.build
subprojects/darkedif-sdk/tools/acecalltablegen/: acecalltablegen.cpp  meson.build
subprojects/darkedif-sdk/tools/bin2hpp/: meson.build
subprojects/darkedif-sdk/tools/jsonminify/: jsonminify.cpp
