option(
    'editor_build',
    type:           'boolean',
    value:          false,
    description:    'Only windows, if enabled a editor .mfx will be built',
)
option(
    'examples',
    type:           'feature',
    value:          'auto',
    description:    'Install examples',
)
option(
    'help',
    type:           'feature',
    value:          'auto',
    description:    'Install help file',
)